@@ -5,6 +5,7 @@ This file lists all external people that have contributed to this project.
 Yura Siamashka <yurand2(at)gmail(dot)com>
 Nick Treleaven <nick(dot)treleaven(at)btinternet(dot)com>
 Enrico Troeger <enrico(dot)troeger(at)uvena(dot)de>
+Dominic Hopf <dmaphy(at)googlemail(dot)com>
 
 Projects you can find some work inside plugin:
 xfbib (http://goodies.xfce.org/projects/applications/xfbib)
