@@ -142,79 +142,79 @@ SubMenuTemplate glatex_char_array[] = {
 	{ARROW_CHAR, "⇒", "\\Rightarrow" },
 	{ARROW_CHAR, "⇓", "\\Downarrow" },
 	{ARROW_CHAR, "⇔", "\\Leftrightarrow" },
-	{RELATIONAL_SIGNS, "\u2264", "\\leq"},
-	{RELATIONAL_SIGNS, "\u2265", "\\geq"},
-	{RELATIONAL_SIGNS, "\u220E", "\\qed"},
-	{RELATIONAL_SIGNS, "\u2261", "\\equiv"},
-	{RELATIONAL_SIGNS, "\u22A7", "\\models"},
-	{RELATIONAL_SIGNS, "\u227A", "\\prec"},
-	{RELATIONAL_SIGNS, "\u227B", "\\succ"},
-	{RELATIONAL_SIGNS, "\u223C", "\\sim"},
-	{RELATIONAL_SIGNS, "\u27C2", "\\perp"},
-	{RELATIONAL_SIGNS, "\u2AAF", "\\preceq"},
-	{RELATIONAL_SIGNS, "\u2AB0", "\\succeq"},
-	{RELATIONAL_SIGNS, "\u2243", "\\simeq"},
-	{RELATIONAL_SIGNS, "\u2223", "\\mid"},
-	{RELATIONAL_SIGNS, "\u226A", "\\ll"},
-	{RELATIONAL_SIGNS, "\u226B", "\\gg"},
-	{RELATIONAL_SIGNS, "\u224D", "\\asymp"},
-	{RELATIONAL_SIGNS, "\u2225", "\\parallel"},
-	{RELATIONAL_SIGNS, "\u2282", "\\subset"},
-	{RELATIONAL_SIGNS, "\u2283", "\\supset"},
-	{RELATIONAL_SIGNS, "\u2248", "\\approx"},
-	{RELATIONAL_SIGNS, "\u22C8", "\\bowtie"},
-	{RELATIONAL_SIGNS, "\u2286", "\\subseteq"},
-	{RELATIONAL_SIGNS, "\u2287", "\\supseteq"},
-	{RELATIONAL_SIGNS, "\u2245", "\\cong"},
-	{RELATIONAL_SIGNS, "\u2A1D", "\\Join"},
-	{RELATIONAL_SIGNS, "\u228F", "\\sqsubset"},
-	{RELATIONAL_SIGNS, "\u2290", "\\sqsupset"},
-	{RELATIONAL_SIGNS, "\u2260", "\\neq"},
-	{RELATIONAL_SIGNS, "\u2323", "\\smile"},
-	{RELATIONAL_SIGNS, "\u2291", "\\sqsubseteq"},
-	{RELATIONAL_SIGNS, "\u2292", "\\sqsupseteq"},
-	{RELATIONAL_SIGNS, "\u2250", "\\doteq"},
-	{RELATIONAL_SIGNS, "\u2322", "\\frown"},
-	{RELATIONAL_SIGNS, "\u2208", "\\in"},
-	{RELATIONAL_SIGNS, "\u220B", "\\ni"},
-	{RELATIONAL_SIGNS, "\u221D", "\\propto"},
-	{RELATIONAL_SIGNS, "\u22A2", "\\vdash"},
-	{RELATIONAL_SIGNS, "\u22A3", "\\dashv"},
-	{BINARY_OPERATIONS, "\u00B1", "\\pm"},
-	{BINARY_OPERATIONS, "\u2213", "\\mp"},
-	{BINARY_OPERATIONS, "\u00D7", "\\times"},
-	{BINARY_OPERATIONS, "\u00F7", "\\div"},
-	{BINARY_OPERATIONS, "\u2217", "\\ast"},
-	{BINARY_OPERATIONS, "\u22C6", "\\star"},
-	{BINARY_OPERATIONS, "\u2218", "\\circ"},
-	{BINARY_OPERATIONS, "\u2219", "\\bullet"},
-	{BINARY_OPERATIONS, "\u22C5", "\\cdot"},
-	{BINARY_OPERATIONS, "\u2229", "\\cap"},
-	{BINARY_OPERATIONS, "\u222A", "\\cup"},
-	{BINARY_OPERATIONS, "\u228E", "\\uplus"},
-	{BINARY_OPERATIONS, "\u2293", "\\sqcap"},
-	{BINARY_OPERATIONS, "\u2228", "\\vee"},
-	{BINARY_OPERATIONS, "\u2227", "\\wedge"},
-	{BINARY_OPERATIONS, "\u2216", "\\setminus"},
-	{BINARY_OPERATIONS, "\u2240", "\\wr"},
-	{BINARY_OPERATIONS, "\u22C4", "\\diamond"},
-	{BINARY_OPERATIONS, "\u25B3", "\\bigtriangleup"},
-	{BINARY_OPERATIONS, "\u25BD", "\\bigtriangledown"},
-	{BINARY_OPERATIONS, "\u25C1", "\\triangleleft"},
-	{BINARY_OPERATIONS, "\u25B7", "\\triangleright"},
+	{RELATIONAL_SIGNS, "\342\211\244", "\\leq"},
+	{RELATIONAL_SIGNS, "\342\211\245", "\\geq"},
+	{RELATIONAL_SIGNS, "\342\210\216", "\\qed"},
+	{RELATIONAL_SIGNS, "\342\211\241", "\\equiv"},
+	{RELATIONAL_SIGNS, "\342\212\247", "\\models"},
+	{RELATIONAL_SIGNS, "\342\211\272", "\\prec"},
+	{RELATIONAL_SIGNS, "\342\211\273", "\\succ"},
+	{RELATIONAL_SIGNS, "\342\211\274", "\\sim"},
+	{RELATIONAL_SIGNS, "\342\237\202", "\\perp"},
+	{RELATIONAL_SIGNS, "\342\252\257", "\\preceq"},
+	{RELATIONAL_SIGNS, "\342\252\260", "\\succeq"},
+	{RELATIONAL_SIGNS, "\342\211\203", "\\simeq"},
+	{RELATIONAL_SIGNS, "\342\210\243", "\\mid"},
+	{RELATIONAL_SIGNS, "\342\211\252", "\\ll"},
+	{RELATIONAL_SIGNS, "\342\211\253", "\\gg"},
+	{RELATIONAL_SIGNS, "\342\211\215", "\\asymp"},
+	{RELATIONAL_SIGNS, "\342\210\245", "\\parallel"},
+	{RELATIONAL_SIGNS, "\342\212\202", "\\subset"},
+	{RELATIONAL_SIGNS, "\342\212\203", "\\supset"},
+	{RELATIONAL_SIGNS, "\342\211\210", "\\approx"},
+	{RELATIONAL_SIGNS, "\342\213\210", "\\bowtie"},
+	{RELATIONAL_SIGNS, "\342\212\206", "\\subseteq"},
+	{RELATIONAL_SIGNS, "\342\212\207", "\\supseteq"},
+	{RELATIONAL_SIGNS, "\342\211\205", "\\cong"},
+	{RELATIONAL_SIGNS, "\342\250\235", "\\Join"},
+	{RELATIONAL_SIGNS, "\342\212\217", "\\sqsubset"},
+	{RELATIONAL_SIGNS, "\342\212\220", "\\sqsupset"},
+	{RELATIONAL_SIGNS, "\342\211\240", "\\neq"},
+	{RELATIONAL_SIGNS, "\342\214\243", "\\smile"},
+	{RELATIONAL_SIGNS, "\342\212\221", "\\sqsubseteq"},
+	{RELATIONAL_SIGNS, "\342\212\222", "\\sqsupseteq"},
+	{RELATIONAL_SIGNS, "\342\211\220", "\\doteq"},
+	{RELATIONAL_SIGNS, "\342\214\242", "\\frown"},
+	{RELATIONAL_SIGNS, "\342\210\210", "\\in"},
+	{RELATIONAL_SIGNS, "\342\210\213", "\\ni"},
+	{RELATIONAL_SIGNS, "\342\210\235", "\\propto"},
+	{RELATIONAL_SIGNS, "\342\212\242", "\\vdash"},
+	{RELATIONAL_SIGNS, "\342\212\243", "\\dashv"},
+	{BINARY_OPERATIONS, "\302\261", "\\pm"},
+	{BINARY_OPERATIONS, "\342\210\223", "\\mp"},
+	{BINARY_OPERATIONS, "\303\227", "\\times"},
+	{BINARY_OPERATIONS, "\303\267", "\\div"},
+	{BINARY_OPERATIONS, "\342\210\227", "\\ast"},
+	{BINARY_OPERATIONS, "\342\213\206", "\\star"},
+	{BINARY_OPERATIONS, "\342\210\230", "\\circ"},
+	{BINARY_OPERATIONS, "\342\210\231", "\\bullet"},
+	{BINARY_OPERATIONS, "\342\213\205", "\\cdot"},
+	{BINARY_OPERATIONS, "\342\210\251", "\\cap"},
+	{BINARY_OPERATIONS, "\342\210\252", "\\cup"},
+	{BINARY_OPERATIONS, "\342\212\216", "\\uplus"},
+	{BINARY_OPERATIONS, "\342\212\223", "\\sqcap"},
+	{BINARY_OPERATIONS, "\342\210\250", "\\vee"},
+	{BINARY_OPERATIONS, "\342\210\247", "\\wedge"},
+	{BINARY_OPERATIONS, "\342\210\226", "\\setminus"},
+	{BINARY_OPERATIONS, "\342\211\200", "\\wr"},
+	{BINARY_OPERATIONS, "\342\213\204", "\\diamond"},
+	{BINARY_OPERATIONS, "\342\226\263", "\\bigtriangleup"},
+	{BINARY_OPERATIONS, "\342\226\275", "\\bigtriangledown"},
+	{BINARY_OPERATIONS, "\342\227\201", "\\triangleleft"},
+	{BINARY_OPERATIONS, "\342\226\267", "\\triangleright"},
 	{BINARY_OPERATIONS, "", "\\lhd"},
 	{BINARY_OPERATIONS, "", "\\rhd"},
 	{BINARY_OPERATIONS, "", "\\unlhd"},
 	{BINARY_OPERATIONS, "", "\\unrhd"},
-	{BINARY_OPERATIONS, "\u2295", "\\oplus"},
-	{BINARY_OPERATIONS, "\u2296", "\\ominus"},
-	{BINARY_OPERATIONS, "\u2297", "\\otimes"},
-	{BINARY_OPERATIONS, "\u2205", "\\oslash"},
-	{BINARY_OPERATIONS, "\u2299", "\\odot"},
-	{BINARY_OPERATIONS, "\u25CB", "\\bigcirc"},
-	{BINARY_OPERATIONS, "\u2020", "\\dagger"},
-	{BINARY_OPERATIONS, "\u2021", "\\ddagger"},
-	{BINARY_OPERATIONS, "\u2A3F", "\\amalg"},
+	{BINARY_OPERATIONS, "\342\212\225", "\\oplus"},
+	{BINARY_OPERATIONS, "\342\212\226", "\\ominus"},
+	{BINARY_OPERATIONS, "\342\212\227", "\\otimes"},
+	{BINARY_OPERATIONS, "\342\210\205", "\\oslash"},
+	{BINARY_OPERATIONS, "\342\212\231", "\\odot"},
+	{BINARY_OPERATIONS, "\342\227\213", "\\bigcirc"},
+	{BINARY_OPERATIONS, "\342\200\240", "\\dagger"},
+	{BINARY_OPERATIONS, "\342\200\241", "\\ddagger"},
+	{BINARY_OPERATIONS, "\342\250\277", "\\amalg"},
 	{0, NULL, NULL},
 
 };
