@@ -1,3 +1,9 @@
+2009-03-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Replace \u-UTF-8 letters by octal coded chars. Huge thanks to
+   Dominic Hopf for providing patch and fighting that fight.
+
+
 2009-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Added a function to bulk replace special characters
